--- a/HorseCollector/Base.lproj/Main.storyboard
+++ b/HorseCollector/Base.lproj/Main.storyboard
@@ -86,6 +86,9 @@
                                 <rect key="frame" x="133" y="407" width="99" height="48"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Delete"/>
+                                <connections>
+                                    <action selector="deleteActionButton:" destination="Pjq-vf-69D" eventType="touchUpInside" id="QFo-C6-p8E"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
